tests/ui/lint/snapshots/tailcall_recursive_call_not_in_tail_position.snap
---
source: tests/ui/lint/mod.rs
assertion_line: 8259
---
  [error] Recursive call to `bad` is not in tail position
   ╭─[test.lis:4:30]
 3 │ fn bad(n: int) -> int {
 4 │   if n <= 0 { 0 } else { 1 + bad(n - 1) }
   ·                              ─────┬────
   ·                                   ╰── this call result is consumed before returning
 5 │ }
   ╰────
  help: A tail call's result must be returned directly. Move work that follows the call into the recursive arguments, or remove `#[tailcall]` · code: [infer.tailcall_not_in_tail_position]
